src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> formatted_query
Rule 1     formatted_query -> query
Rule 2     query -> subquerry
Rule 3     query -> query semicolon
Rule 4     query -> comment query
Rule 5     subquerry -> expr_definition_list
Rule 6     select_full -> select_block
Rule 7     select_full -> select_full combine_keyword select_full
Rule 8     select_full -> left_par select_full right_par
Rule 9     select_full -> select_block additional_block_list
Rule 10    select_block -> select_keyword select_clause
Rule 11    select_keyword -> select
Rule 12    select_keyword -> select distinct
Rule 13    select_keyword -> select all
Rule 14    select_clause -> expr comma select_clause
Rule 15    select_clause -> expr
Rule 16    additional_block_list -> additional_block additional_block_list
Rule 17    additional_block_list -> additional_block
Rule 18    additional_block -> keyword_block
Rule 19    additional_block -> by_block
Rule 20    additional_block -> join_block
Rule 21    keyword_block -> from clause
Rule 22    keyword_block -> where clause
Rule 23    keyword_block -> limit clause
Rule 24    keyword_block -> having clause
Rule 25    keyword_block -> option clause
Rule 26    by_block -> group by clause
Rule 27    by_block -> order by clause
Rule 28    by_block -> cluster by clause
Rule 29    by_block -> distribute by clause
Rule 30    by_block -> sort by clause
Rule 31    by_block -> partition by clause
Rule 32    clause -> expr_list
Rule 33    combine_keyword -> union all
Rule 34    combine_keyword -> union distinct
Rule 35    combine_keyword -> union
Rule 36    combine_keyword -> except
Rule 37    join_block -> join_expression clause on expr_list
Rule 38    join_block -> join_expression clause
Rule 39    join_expression -> join_prefix_list join
Rule 40    join_expression -> join
Rule 41    join_prefix -> inner
Rule 42    join_prefix -> outer
Rule 43    join_prefix -> left
Rule 44    join_prefix -> right
Rule 45    join_prefix -> full
Rule 46    join_prefix -> semi
Rule 47    join_prefix -> cross
Rule 48    join_prefix -> natural
Rule 49    join_prefix_list -> join_prefix join_prefix_list
Rule 50    join_prefix_list -> join_prefix
Rule 51    case_when -> case case_when_clause_list end
Rule 52    case_when_clause_list -> case_when_clause case_when_clause_list
Rule 53    case_when_clause_list -> case_when_clause
Rule 54    case_when_clause -> when expr then expr
Rule 55    case_when_clause -> else expr
Rule 56    over_block -> over left_par over_clause_list right_par
Rule 57    over_clause_list -> over_clause_list over_clause
Rule 58    over_clause_list -> over_clause
Rule 59    over_clause -> by_block
Rule 60    expr -> expr_definition_list
Rule 61    expr_definition_list -> expr_definition expr_definition_list
Rule 62    expr_definition_list -> expr_definition point expr_definition_list
Rule 63    expr_definition_list -> expr_definition
Rule 64    expr_definition_list -> not expr_definition_list
Rule 65    expr_definition_list -> expr_definition comparison expr_definition_list
Rule 66    expr_definition_list -> expr_definition symbol expr_definition_list
Rule 67    expr_definition_list -> expr_definition as expr_definition_list
Rule 68    expr_definition_list -> expr_definition is expr_definition_list
Rule 69    expr_definition_list -> expr_definition in expr_definition_list
Rule 70    expr_definition_list -> expr_definition with expr_definition_list
Rule 71    expr_definition_list -> between expr_definition_list
Rule 72    expr_definition_list -> expr_definition and expr_definition_list
Rule 73    expr_definition_list -> expr_definition or expr_definition_list
Rule 74    expr_definition -> label
Rule 75    expr_definition -> string_simple
Rule 76    expr_definition -> string_double
Rule 77    expr_definition -> string_grave
Rule 78    expr_definition -> distinct
Rule 79    expr_definition -> all
Rule 80    expr_definition -> null
Rule 81    expr_definition -> true
Rule 82    expr_definition -> false
Rule 83    expr_definition -> coalesce
Rule 84    expr_definition -> cast
Rule 85    expr_definition -> concat
Rule 86    expr_definition -> asc
Rule 87    expr_definition -> desc
Rule 88    expr_definition -> symbol
Rule 89    expr_definition -> case_when
Rule 90    expr_definition -> select_full
Rule 91    expr_definition -> over_block
Rule 92    expr_definition -> left_bra expr_list right_bra
Rule 93    expr_definition -> left_bra right_bra
Rule 94    expr_definition -> left_par expr_definition_list right_par
Rule 95    expr_definition -> left_par expr_list right_par
Rule 96    expr_definition -> left_par right_par
Rule 97    expr_list -> expr_definition_list comma expr_list
Rule 98    expr_list -> expr_definition_list
Rule 99    select -> SELECT
Rule 100   all -> ALL
Rule 101   distinct -> DISTINCT
Rule 102   from -> FROM
Rule 103   where -> WHERE
Rule 104   by -> BY
Rule 105   group -> GROUP
Rule 106   order -> ORDER
Rule 107   cluster -> CLUSTER
Rule 108   distribute -> DISTRIBUTE
Rule 109   sort -> SORT
Rule 110   partition -> PARTITION
Rule 111   having -> HAVING
Rule 112   limit -> LIMIT
Rule 113   as -> AS
Rule 114   case -> CASE
Rule 115   when -> WHEN
Rule 116   then -> THEN
Rule 117   else -> ELSE
Rule 118   end -> END
Rule 119   or -> OR
Rule 120   and -> AND
Rule 121   not -> NOT
Rule 122   is -> IS
Rule 123   in -> IN
Rule 124   true -> TRUE
Rule 125   false -> FALSE
Rule 126   null -> NULL
Rule 127   coalesce -> COALESCE
Rule 128   cast -> CAST
Rule 129   concat -> CONCAT
Rule 130   union -> UNION
Rule 131   except -> EXCEPT
Rule 132   between -> BETWEEN
Rule 133   asc -> ASC
Rule 134   desc -> DESC
Rule 135   join -> JOIN
Rule 136   on -> ON
Rule 137   inner -> INNER
Rule 138   outer -> OUTER
Rule 139   left -> LEFT
Rule 140   right -> RIGHT
Rule 141   full -> FULL
Rule 142   semi -> SEMI
Rule 143   cross -> CROSS
Rule 144   natural -> NATURAL
Rule 145   with -> WITH
Rule 146   option -> OPTION
Rule 147   over -> OVER
Rule 148   comma -> COMMA
Rule 149   comparison -> COMPARISON
Rule 150   symbol -> SYMBOL
Rule 151   semicolon -> SEMICOLON
Rule 152   point -> POINT
Rule 153   label -> LABEL
Rule 154   left_par -> LEFT_PAR
Rule 155   right_par -> RIGHT_PAR
Rule 156   left_bra -> LEFT_BRA
Rule 157   right_bra -> RIGHT_BRA
Rule 158   string_simple -> STRING_SIMPLE
Rule 159   string_double -> STRING_DOUBLE
Rule 160   string_grave -> STRING_GRAVE
Rule 161   select -> select comment
Rule 162   all -> all comment
Rule 163   distinct -> distinct comment
Rule 164   from -> from comment
Rule 165   where -> where comment
Rule 166   by -> by comment
Rule 167   group -> group comment
Rule 168   order -> order comment
Rule 169   cluster -> cluster comment
Rule 170   distribute -> distribute comment
Rule 171   sort -> sort comment
Rule 172   partition -> partition comment
Rule 173   having -> having comment
Rule 174   limit -> limit comment
Rule 175   as -> as comment
Rule 176   case -> case comment
Rule 177   when -> when comment
Rule 178   then -> then comment
Rule 179   else -> else comment
Rule 180   end -> end comment
Rule 181   or -> or comment
Rule 182   and -> and comment
Rule 183   not -> not comment
Rule 184   is -> is comment
Rule 185   in -> in comment
Rule 186   true -> true comment
Rule 187   false -> false comment
Rule 188   null -> null comment
Rule 189   coalesce -> coalesce comment
Rule 190   cast -> cast comment
Rule 191   concat -> concat comment
Rule 192   union -> union comment
Rule 193   except -> except comment
Rule 194   between -> between comment
Rule 195   asc -> asc comment
Rule 196   desc -> desc comment
Rule 197   join -> join comment
Rule 198   on -> on comment
Rule 199   inner -> inner comment
Rule 200   outer -> outer comment
Rule 201   left -> left comment
Rule 202   right -> right comment
Rule 203   full -> full comment
Rule 204   semi -> semi comment
Rule 205   cross -> cross comment
Rule 206   natural -> natural comment
Rule 207   with -> with comment
Rule 208   option -> option comment
Rule 209   over -> over comment
Rule 210   comma -> comma comment
Rule 211   comparison -> comparison comment
Rule 212   symbol -> symbol comment
Rule 213   semicolon -> semicolon comment
Rule 214   point -> point comment
Rule 215   label -> label comment
Rule 216   left_par -> left_par comment
Rule 217   right_par -> right_par comment
Rule 218   left_bra -> left_bra comment
Rule 219   right_bra -> right_bra comment
Rule 220   string_simple -> string_simple comment
Rule 221   string_double -> string_double comment
Rule 222   string_grave -> string_grave comment
Rule 223   comment -> COMMENT
Rule 224   comment -> COMMENT_ALONE

Terminals, with rules where they appear

ALL                  : 100
AND                  : 120
AS                   : 113
ASC                  : 133
BETWEEN              : 132
BY                   : 104
CASE                 : 114
CAST                 : 128
CLUSTER              : 107
COALESCE             : 127
COMMA                : 148
COMMENT              : 223
COMMENT_ALONE        : 224
COMPARISON           : 149
CONCAT               : 129
CROSS                : 143
DESC                 : 134
DISTINCT             : 101
DISTRIBUTE           : 108
ELSE                 : 117
END                  : 118
EXCEPT               : 131
FALSE                : 125
FROM                 : 102
FULL                 : 141
GROUP                : 105
HAVING               : 111
IN                   : 123
INNER                : 137
IS                   : 122
JOIN                 : 135
LABEL                : 153
LEFT                 : 139
LEFT_BRA             : 156
LEFT_PAR             : 154
LIMIT                : 112
NATURAL              : 144
NOT                  : 121
NULL                 : 126
ON                   : 136
OPTION               : 146
OR                   : 119
ORDER                : 106
OUTER                : 138
OVER                 : 147
PARTITION            : 110
POINT                : 152
RIGHT                : 140
RIGHT_BRA            : 157
RIGHT_PAR            : 155
SELECT               : 99
SEMI                 : 142
SEMICOLON            : 151
SORT                 : 109
STRING_DOUBLE        : 159
STRING_GRAVE         : 160
STRING_SIMPLE        : 158
SYMBOL               : 150
THEN                 : 116
TRUE                 : 124
UNION                : 130
WHEN                 : 115
WHERE                : 103
WITH                 : 145
error                : 

Nonterminals, with rules where they appear

additional_block     : 16 17
additional_block_list : 9 16
all                  : 13 33 79 162
and                  : 72 182
as                   : 67 175
asc                  : 86 195
between              : 71 194
by                   : 26 27 28 29 30 31 166
by_block             : 19 59
case                 : 51 176
case_when            : 89
case_when_clause     : 52 53
case_when_clause_list : 51 52
cast                 : 84 190
clause               : 21 22 23 24 25 26 27 28 29 30 31 37 38
cluster              : 28 169
coalesce             : 83 189
combine_keyword      : 7
comma                : 14 97 210
comment              : 4 161 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221 222
comparison           : 65 211
concat               : 85 191
cross                : 47 205
desc                 : 87 196
distinct             : 12 34 78 163
distribute           : 29 170
else                 : 55 179
end                  : 51 180
except               : 36 193
expr                 : 14 15 54 54 55
expr_definition      : 61 62 63 65 66 67 68 69 70 72 73
expr_definition_list : 5 60 61 62 64 65 66 67 68 69 70 71 72 73 94 97 98
expr_list            : 32 37 92 95 97
false                : 82 187
formatted_query      : 0
from                 : 21 164
full                 : 45 203
group                : 26 167
having               : 24 173
in                   : 69 185
inner                : 41 199
is                   : 68 184
join                 : 39 40 197
join_block           : 20
join_expression      : 37 38
join_prefix          : 49 50
join_prefix_list     : 39 49
keyword_block        : 18
label                : 74 215
left                 : 43 201
left_bra             : 92 93 218
left_par             : 8 56 94 95 96 216
limit                : 23 174
natural              : 48 206
not                  : 64 183
null                 : 80 188
on                   : 37 198
option               : 25 208
or                   : 73 181
order                : 27 168
outer                : 42 200
over                 : 56 209
over_block           : 91
over_clause          : 57 58
over_clause_list     : 56 57
partition            : 31 172
point                : 62 214
query                : 1 3 4
right                : 44 202
right_bra            : 92 93 219
right_par            : 8 56 94 95 96 217
select               : 11 12 13 161
select_block         : 6 9
select_clause        : 10 14
select_full          : 7 7 8 90
select_keyword       : 10
semi                 : 46 204
semicolon            : 3 213
sort                 : 30 171
string_double        : 76 221
string_grave         : 77 222
string_simple        : 75 220
subquerry            : 2
symbol               : 66 88 212
then                 : 54 178
true                 : 81 186
union                : 33 34 35 192
when                 : 54 177
where                : 22 165
with                 : 70 207

Parsing method: LALR

state 0

    (0) S' -> . formatted_query
    (1) formatted_query -> . query
    (2) query -> . subquerry
    (3) query -> . query semicolon
    (4) query -> . comment query
    (5) subquerry -> . expr_definition_list
    (223) comment -> . COMMENT
    (224) comment -> . COMMENT_ALONE
    (61) expr_definition_list -> . expr_definition expr_definition_list
    (62) expr_definition_list -> . expr_definition point expr_definition_list
    (63) expr_definition_list -> . expr_definition
    (64) expr_definition_list -> . not expr_definition_list
    (65) expr_definition_list -> . expr_definition comparison expr_definition_list
    (66) expr_definition_list -> . expr_definition symbol expr_definition_list
    (67) expr_definition_list -> . expr_definition as expr_definition_list
    (68) expr_definition_list -> . expr_definition is expr_definition_list
    (69) expr_definition_list -> . expr_definition in expr_definition_list
    (70) expr_definition_list -> . expr_definition with expr_definition_list
    (71) expr_definition_list -> . between expr_definition_list
    (72) expr_definition_list -> . expr_definition and expr_definition_list
    (73) expr_definition_list -> . expr_definition or expr_definition_list
    (74) expr_definition -> . label
    (75) expr_definition -> . string_simple
    (76) expr_definition -> . string_double
    (77) expr_definition -> . string_grave
    (78) expr_definition -> . distinct
    (79) expr_definition -> . all
    (80) expr_definition -> . null
    (81) expr_definition -> . true
    (82) expr_definition -> . false
    (83) expr_definition -> . coalesce
    (84) expr_definition -> . cast
    (85) expr_definition -> . concat
    (86) expr_definition -> . asc
    (87) expr_definition -> . desc
    (88) expr_definition -> . symbol
    (89) expr_definition -> . case_when
    (90) expr_definition -> . select_full
    (91) expr_definition -> . over_block
    (92) expr_definition -> . left_bra expr_list right_bra
    (93) expr_definition -> . left_bra right_bra
    (94) expr_definition -> . left_par expr_definition_list right_par
    (95) expr_definition -> . left_par expr_list right_par
    (96) expr_definition -> . left_par right_par
    (121) not -> . NOT
    (183) not -> . not comment
    (132) between -> . BETWEEN
    (194) between -> . between comment
    (153) label -> . LABEL
    (215) label -> . label comment
    (158) string_simple -> . STRING_SIMPLE
    (220) string_simple -> . string_simple comment
    (159) string_double -> . STRING_DOUBLE
    (221) string_double -> . string_double comment
    (160) string_grave -> . STRING_GRAVE
    (222) string_grave -> . string_grave comment
    (101) distinct -> . DISTINCT
    (163) distinct -> . distinct comment
    (100) all -> . ALL
    (162) all -> . all comment
    (126) null -> . NULL
    (188) null -> . null comment
    (124) true -> . TRUE
    (186) true -> . true comment
    (125) false -> . FALSE
    (187) false -> . false comment
    (127) coalesce -> . COALESCE
    (189) coalesce -> . coalesce comment
    (128) cast -> . CAST
    (190) cast -> . cast comment
    (129) concat -> . CONCAT
    (191) concat -> . concat comment
    (133) asc -> . ASC
    (195) asc -> . asc comment
    (134) desc -> . DESC
    (196) desc -> . desc comment
    (150) symbol -> . SYMBOL
    (212) symbol -> . symbol comment
    (51) case_when -> . case case_when_clause_list end
    (6) select_full -> . select_block
    (7) select_full -> . select_full combine_keyword select_full
    (8) select_full -> . left_par select_full right_par
    (9) select_full -> . select_block additional_block_list
    (56) over_block -> . over left_par over_clause_list right_par
    (156) left_bra -> . LEFT_BRA
    (218) left_bra -> . left_bra comment
    (154) left_par -> . LEFT_PAR
    (216) left_par -> . left_par comment
    (114) case -> . CASE
    (176) case -> . case comment
    (10) select_block -> . select_keyword select_clause
    (147) over -> . OVER
    (209) over -> . over comment
    (11) select_keyword -> . select
    (12) select_keyword -> . select distinct
    (13) select_keyword -> . select all
    (99) select -> . SELECT
    (161) select -> . select comment

    COMMENT         shift and go to state 6
    COMMENT_ALONE   shift and go to state 7
    NOT             shift and go to state 31
    BETWEEN         shift and go to state 32
    LABEL           shift and go to state 33
    STRING_SIMPLE   shift and go to state 34
    STRING_DOUBLE   shift and go to state 35
    STRING_GRAVE    shift and go to state 36
    DISTINCT        shift and go to state 37
    ALL             shift and go to state 38
    NULL            shift and go to state 39
    TRUE            shift and go to state 40
    FALSE           shift and go to state 41
    COALESCE        shift and go to state 42
    CAST            shift and go to state 43
    CONCAT          shift and go to state 44
    ASC             shift and go to state 45
    DESC            shift and go to state 46
    SYMBOL          shift and go to state 47
    LEFT_BRA        shift and go to state 51
    LEFT_PAR        shift and go to state 52
    CASE            shift and go to state 53
    OVER            shift and go to state 55
    SELECT          shift and go to state 57

    formatted_query                shift and go to state 1
    query                          shift and go to state 2
    subquerry                      shift and go to state 3
    comment                        shift and go to state 4
    expr_definition_list           shift and go to state 5
    expr_definition                shift and go to state 8
    not                            shift and go to state 9
    symbol                         shift and go to state 10
    between                        shift and go to state 11
    label                          shift and go to state 12
    string_simple                  shift and go to state 13
    string_double                  shift and go to state 14
    string_grave                   shift and go to state 15
    distinct                       shift and go to state 16
    all                            shift and go to state 17
    null                           shift and go to state 18
    true                           shift and go to state 19
    false                          shift and go to state 20
    coalesce                       shift and go to state 21
    cast                           shift and go to state 22
    concat                         shift and go to state 23
    asc                            shift and go to state 24
    desc                           shift and go to state 25
    case_when                      shift and go to state 26
    select_full                    shift and go to state 27
    over_block                     shift and go to state 28
    left_bra                       shift and go to state 29
    left_par                       shift and go to state 30
    case                           shift and go to state 48
    select_block                   shift and go to state 49
    over                           shift and go to state 50
    select_keyword                 shift and go to state 54
    select                         shift and go to state 56

state 1

    (0) S' -> formatted_query .



state 2

    (1) formatted_query -> query .
    (3) query -> query . semicolon
    (151) semicolon -> . SEMICOLON
    (213) semicolon -> . semicolon comment

    $end            reduce using rule 1 (formatted_query -> query .)
    SEMICOLON       shift and go to state 59

    semicolon                      shift and go to state 58

state 3

    (2) query -> subquerry .

    SEMICOLON       reduce using rule 2 (query -> subquerry .)
    $end            reduce using rule 2 (query -> subquerry .)


state 4

    (4) query -> comment . query
    (2) query -> . subquerry
    (3) query -> . query semicolon
    (4) query -> . comment query
    (5) subquerry -> . expr_definition_list
    (223) comment -> . COMMENT
    (224) comment -> . COMMENT_ALONE
    (61) expr_definition_list -> . expr_definition expr_definition_list
    (62) expr_definition_list -> . expr_definition point expr_definition_list
    (63) expr_definition_list -> . expr_definition
    (64) expr_definition_list -> . not expr_definition_list
    (65) expr_definition_list -> . expr_definition comparison expr_definition_list
    (66) expr_definition_list -> . expr_definition symbol expr_definition_list
    (67) expr_definition_list -> . expr_definition as expr_definition_list
    (68) expr_definition_list -> . expr_definition is expr_definition_list
    (69) expr_definition_list -> . expr_definition in expr_definition_list
    (70) expr_definition_list -> . expr_definition with expr_definition_list
    (71) expr_definition_list -> . between expr_definition_list
    (72) expr_definition_list -> . expr_definition and expr_definition_list
    (73) expr_definition_list -> . expr_definition or expr_definition_list
    (74) expr_definition -> . label
    (75) expr_definition -> . string_simple
    (76) expr_definition -> . string_double
    (77) expr_definition -> . string_grave
    (78) expr_definition -> . distinct
    (79) expr_definition -> . all
    (80) expr_definition -> . null
    (81) expr_definition -> . true
    (82) expr_definition -> . false
    (83) expr_definition -> . coalesce
    (84) expr_definition -> . cast
    (85) expr_definition -> . concat
    (86) expr_definition -> . asc
    (87) expr_definition -> . desc
    (88) expr_definition -> . symbol
    (89) expr_definition -> . case_when
    (90) expr_definition -> . select_full
    (91) expr_definition -> . over_block
    (92) expr_definition -> . left_bra expr_list right_bra
    (93) expr_definition -> . left_bra right_bra
    (94) expr_definition -> . left_par expr_definition_list right_par
    (95) expr_definition -> . left_par expr_list right_par
    (96) expr_definition -> . left_par right_par
    (121) not -> . NOT
    (183) not -> . not comment
    (132) between -> . BETWEEN
    (194) between -> . between comment
    (153) label -> . LABEL
    (215) label -> . label comment
    (158) string_simple -> . STRING_SIMPLE
    (220) string_simple -> . string_simple comment
    (159) string_double -> . STRING_DOUBLE
    (221) string_double -> . string_double comment
    (160) string_grave -> . STRING_GRAVE
    (222) string_grave -> . string_grave comment
    (101) distinct -> . DISTINCT
    (163) distinct -> . distinct comment
    (100) all -> . ALL
    (162) all -> . all comment
    (126) null -> . NULL
    (188) null -> . null comment
    (124) true -> . TRUE
    (186) true -> . true comment
    (125) false -> . FALSE
    (187) false -> . false comment
    (127) coalesce -> . COALESCE
    (189) coalesce -> . coalesce comment
    (128) cast -> . CAST
    (190) cast -> . cast comment
    (129) concat -> . CONCAT
    (191) concat -> . concat comment
    (133) asc -> . ASC
    (195) asc -> . asc comment
    (134) desc -> . DESC
    (196) desc -> . desc comment
    (150) symbol -> . SYMBOL
    (212) symbol -> . symbol comment
    (51) case_when -> . case case_when_clause_list end
    (6) select_full -> . select_block
    (7) select_full -> . select_full combine_keyword select_full
    (8) select_full -> . left_par select_full right_par
    (9) select_full -> . select_block additional_block_list
    (56) over_block -> . over left_par over_clause_list right_par
    (156) left_bra -> . LEFT_BRA
    (218) left_bra -> . left_bra comment
    (154) left_par -> . LEFT_PAR
    (216) left_par -> . left_par comment
    (114) case -> . CASE
    (176) case -> . case comment
    (10) select_block -> . select_keyword select_clause
    (147) over -> . OVER
    (209) over -> . over comment
    (11) select_keyword -> . select
    (12) select_keyword -> . select distinct
    (13) select_keyword -> . select all
    (99) select -> . SELECT
    (161) select -> . select comment

    COMMENT         shift and go to state 6
    COMMENT_ALONE   shift and go to state 7
    NOT             shift and go to state 31
    BETWEEN         shift and go to state 32
    LABEL           shift and go to state 33
    STRING_SIMPLE   shift and go to state 34
    STRING_DOUBLE   shift and go to state 35
    STRING_GRAVE    shift and go to state 36
    DISTINCT        shift and go to state 37
    ALL             shift and go to state 38
    NULL            shift and go to state 39
    TRUE            shift and go to state 40
    FALSE           shift and go to state 41
    COALESCE        shift and go to state 42
    CAST            shift and go to state 43
    CONCAT          shift and go to state 44
    ASC             shift and go to state 45
    DESC            shift and go to state 46
    SYMBOL          shift and go to state 47
    LEFT_BRA        shift and go to state 51
    LEFT_PAR        shift and go to state 52
    CASE            shift and go to state 53
    OVER            shift and go to state 55
    SELECT          shift and go to state 57

    comment                        shift and go to state 4
    query                          shift and go to state 60
    subquerry                      shift and go to state 3
    expr_definition_list           shift and go to state 5
    expr_definition                shift and go to state 8
    not                            shift and go to state 9
    symbol                         shift and go to state 10
    between                        shift and go to state 11
    label                          shift and go to state 12
    string_simple                  shift and go to state 13
    string_double                  shift and go to state 14
    string_grave                   shift and go to state 15
    distinct                       shift and go to state 16
    all                            shift and go to state 17
    null                           shift and go to state 18
    true                           shift and go to state 19
    false                          shift and go to state 20
    coalesce                       shift and go to state 21
    cast                           shift and go to state 22
    concat                         shift and go to state 23
    asc                            shift and go to state 24
    desc                           shift and go to state 25
    case_when                      shift and go to state 26
    select_full                    shift and go to state 27
    over_block                     shift and go to state 28
    left_bra                       shift and go to state 29
    left_par                       shift and go to state 30
    case                           shift and go to state 48
    select_block                   shift and go to state 49
    over                           shift and go to state 50
    select_keyword                 shift and go to state 54
    select                         shift and go to state 56

state 5

    (5) subquerry -> expr_definition_list .

    SEMICOLON       reduce using rule 5 (subquerry -> expr_definition_list .)
    $end            reduce using rule 5 (subquerry -> expr_definition_list .)


state 6

    (223) comment -> COMMENT .

    COMMENT         reduce using rule 223 (comment -> COMMENT .)
    COMMENT_ALONE   reduce using rule 223 (comment -> COMMENT .)
    NOT             reduce using rule 223 (comment -> COMMENT .)
    BETWEEN         reduce using rule 223 (comment -> COMMENT .)
    LABEL           reduce using rule 223 (comment -> COMMENT .)
    STRING_SIMPLE   reduce using rule 223 (comment -> COMMENT .)
    STRING_DOUBLE   reduce using rule 223 (comment -> COMMENT .)
    STRING_GRAVE    reduce using rule 223 (comment -> COMMENT .)
    DISTINCT        reduce using rule 223 (comment -> COMMENT .)
    ALL             reduce using rule 223 (comment -> COMMENT .)
    NULL            reduce using rule 223 (comment -> COMMENT .)
    TRUE            reduce using rule 223 (comment -> COMMENT .)
    FALSE           reduce using rule 223 (comment -> COMMENT .)
    COALESCE        reduce using rule 223 (comment -> COMMENT .)
    CAST            reduce using rule 223 (comment -> COMMENT .)
    CONCAT          reduce using rule 223 (comment -> COMMENT .)
    ASC             reduce using rule 223 (comment -> COMMENT .)
    DESC            reduce using rule 223 (comment -> COMMENT .)
    SYMBOL          reduce using rule 223 (comment -> COMMENT .)
    LEFT_BRA        reduce using rule 223 (comment -> COMMENT .)
    LEFT_PAR        reduce using rule 223 (comment -> COMMENT .)
    CASE            reduce using rule 223 (comment -> COMMENT .)
    OVER            reduce using rule 223 (comment -> COMMENT .)
    SELECT          reduce using rule 223 (comment -> COMMENT .)
    POINT           reduce using rule 223 (comment -> COMMENT .)
    COMPARISON      reduce using rule 223 (comment -> COMMENT .)
    AS              reduce using rule 223 (comment -> COMMENT .)
    IS              reduce using rule 223 (comment -> COMMENT .)
    IN              reduce using rule 223 (comment -> COMMENT .)
    WITH            reduce using rule 223 (comment -> COMMENT .)
    AND             reduce using rule 223 (comment -> COMMENT .)
    OR              reduce using rule 223 (comment -> COMMENT .)
    SEMICOLON       reduce using rule 223 (comment -> COMMENT .)
    $end            reduce using rule 223 (comment -> COMMENT .)
    COMMA           reduce using rule 223 (comment -> COMMENT .)
    RIGHT_BRA       reduce using rule 223 (comment -> COMMENT .)
    RIGHT_PAR       reduce using rule 223 (comment -> COMMENT .)
    FROM            reduce using rule 223 (comment -> COMMENT .)
    WHERE           reduce using rule 223 (comment -> COMMENT .)
    LIMIT           reduce using rule 223 (comment -> COMMENT .)
    HAVING          reduce using rule 223 (comment -> COMMENT .)
    OPTION          reduce using rule 223 (comment -> COMMENT .)
    GROUP           reduce using rule 223 (comment -> COMMENT .)
    ORDER           reduce using rule 223 (comment -> COMMENT .)
    CLUSTER         reduce using rule 223 (comment -> COMMENT .)
    DISTRIBUTE      reduce using rule 223 (comment -> COMMENT .)
    SORT            reduce using rule 223 (comment -> COMMENT .)
    PARTITION       reduce using rule 223 (comment -> COMMENT .)
    JOIN            reduce using rule 223 (comment -> COMMENT .)
    INNER           reduce using rule 223 (comment -> COMMENT .)
    OUTER           reduce using rule 223 (comment -> COMMENT .)
    LEFT            reduce using rule 223 (comment -> COMMENT .)
    RIGHT           reduce using rule 223 (comment -> COMMENT .)
    FULL            reduce using rule 223 (comment -> COMMENT .)
    SEMI            reduce using rule 223 (comment -> COMMENT .)
    CROSS           reduce using rule 223 (comment -> COMMENT .)
    NATURAL         reduce using rule 223 (comment -> COMMENT .)
    UNION           reduce using rule 223 (comment -> COMMENT .)
    EXCEPT          reduce using rule 223 (comment -> COMMENT .)
    THEN            reduce using rule 223 (comment -> COMMENT .)
    WHEN            reduce using rule 223 (comment -> COMMENT .)
    ELSE            reduce using rule 223 (comment -> COMMENT .)
    END             reduce using rule 223 (comment -> COMMENT .)
    ON              reduce using rule 223 (comment -> COMMENT .)
    BY              reduce using rule 223 (comment -> COMMENT .)


state 7

    (224) comment -> COMMENT_ALONE .
